# bluerov_ros

./: .gitmodules  README.md
bluerov/: CMakeLists.txt  package.xml
bluerov/cfg/: bluerov.machine  bluerov.rviz  ekf.yaml  env.sh  machines.xml
bluerov/launch/: bluerov.launch  bluerov_mavros.launch  bluerov_start.launch
bluerov_robot/: CMakeLists.txt  package.xml
bluerov_robot/launch/: bluerov_mavros.launch  bluerov_start.launch  camerav2_1280x720.launch  test.launch
bluerov_robot/urdf/: bluerov.urdf
bluerov_teleop/: CMakeLists.txt  package.xml
bluerov_teleop/cfg/: bluerov_teleop.cfg  teleop_joy.cfg
bluerov_teleop/include/: BluerovTeleop.h
bluerov_teleop/launch/: teleop_f310.launch  teleop_xbox.launch  test_teleop.launch
bluerov_teleop/node/: bluerov_teleop_node.cpp
bluerov_teleop/src/: bluerov_teleop.cpp  teleop_joy.cpp
bluerov_teleop/udev/: 60-symlinks.rules  99-controllers.rules
