<?xml version="1.0"?>
<package format="2">
  <name>bluerov_teleop</name>
  <version>1.0.0</version>
  <description>Joystick teleoperation for BlueROV2</description>

  <maintainer email="awilby@eng.ucsd.edu">Antonella Wilby</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>joy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mavros_msgs</depend>
  <depend>bluerov_robot</depend>
  <depend>sound_play</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
